src/testData/analysis/collectionLiterals/arrayLiterals.cr
x = <error descr="Empty array literals must have an explicit type">[]</error>

x = <error descr="Empty array literals must have an explicit type">[ ]</error>

x = <error descr="Empty array literals must have an explicit type">[
]</error>

x = [] of Int32

x = [1, 2, 3]